# noodle

./: CMakeLists.txt  README.md
inc/: common.hh
inc/noodle/: error.hh  memory.hh
inc/noodle/inc/: error.hh
inc/noodle/src/: error.cc
src/: main.cc
tests/: memory.cc
